src/snapshots/kk__tests__compiler__typecheck__type_annotation_record_property_1.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let x = {a: string = 2}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/type_annotation_record_property_1.kk:1:22
  │
1 │ let x = {a: string = 2}
  │                      ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - string      | + number    |
    +---------------+-------------+
