src/snapshots/kk__tests__compiler__typecheck__variable_shadowing_1.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo = \(x: number) =>
  let x = x
  let x = x
  true

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/variable_shadowing_1.kk:3:7
  │
3 │   let x = x
  │       ^ Unused variable
  │
  = This variable created but not used anywhere, consider removing it.
